# xnn

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
benches/: kernel.rs
benches/tensor/: constant.rs  copy.rs  main.rs  random.rs
benches/tensor/activation/: mod.rs
benches/tensor/binary/: arithmetic.rs  comparison.rs  logical.rs  mod.rs
benches/tensor/linalg/: matmul.rs  mod.rs
benches/tensor/math/: binary.rs  clamp.rs  mod.rs  select.rs  unary.rs
benches/tensor/matrix/: matmul.rs  mod.rs
benches/tensor/nn/: activation.rs  mod.rs
benches/tensor/reduce/: max.rs  mean.rs  min.rs  mod.rs  sum.rs
benches/tensor/reduction/: max.rs  mean.rs  min.rs  mod.rs  sum.rs
benches/tensor/unary/: arithmetic.rs  logical.rs  mod.rs  rounding.rs
examples/: linreg.rs  xor.rs
examples/mnist-train/: .gitignore  Cargo.toml  README.md
examples/mnist-train/src/: main.rs
examples/mnist-web/: .gitignore  Cargo.toml  README.md  index.html
examples/mnist-web/src/: lib.rs
src/: element.rs  error.rs  lib.rs
src/device/: allocator.rs  buffer.rs  context.rs  mod.rs  pipelines.rs
src/kernel/: constant.rs  copy.rs  mod.rs  ops.rs
src/kernel/activation/: mod.rs  relu.rs  sigmoid.rs  with_alpha.rs  with_params.rs
src/kernel/arithmetic/: add.rs  add_scalar.rs  div.rs  div_scalar.rs  mod.rs  mul.rs  mul_scalar.rs  pow.rs  pow_scalar.rs  rem.rs  rem_scalar.rs  sub.rs  sub_scalar.rs
src/kernel/initializer/: fill.rs  mod.rs
src/kernel/linalg/: gemm.rs  matmul.rs  mod.rs  transpose.rs
src/kernel/math/: binary.rs  clamp.rs  mod.rs  select.rs  unary.rs
src/kernel/nn/: activation.rs  mod.rs
src/kernel/reduction/: mod.rs  sum.rs
src/kernel/shape/: broadcast.rs  mod.rs
src/tensor/: layout.rs  mod.rs
src/tensor/ops/: acos.rs  acosh.rs  asin.rs  atanh.rs  ceil.rs  clamp.rs  constant.rs  copy.rs  cos.rs  cosh.rs  exp.rs  matrix.rs  mod.rs  round.rs  sign.rs  sin.rs  sinh.rs  tan.rs
src/tensor/ops/activation/: gelu.rs  mod.rs  relu.rs  sigmoid.rs  silu.rs  softplus.rs
src/tensor/ops/binary/: arithmetic.rs  comparison.rs  logical.rs  mod.rs
src/tensor/ops/reduce/: max.rs  min.rs  mod.rs  sum.rs
src/tensor/ops/unary/: arithmetic.rs  logical.rs  mod.rs  rounding.rs
src/tensor/ops/unary/arithmetic/: abs.rs  acos.rs  acosh.rs  asin.rs  asinh.rs  atan.rs  atanh.rs  cos.rs  cosh.rs  exp.rs  log.rs  mod.rs  neg.rs  rcp.rs  sign.rs  sin.rs  sinh.rs  tan.rs  tanh.rs
src/tensor/ops/unary/logical/: mod.rs  not.rs
src/tensor/ops/unary/rounding/: ceil.rs  floor.rs  mod.rs  round.rs
tests/device/: context.rs  main.rs
tests/element/: bool.rs  f32.rs  i32.rs  main.rs  u32.rs
tests/tensor/: abs.rs  acos.rs  acosh.rs  asin.rs  asinh.rs  atan.rs  atanh.rs  ceil.rs  constant.rs  copy.rs  cos.rs  cosh.rs  exp.rs  floor.rs  from_shape_slice.rs  from_slice.rs  log.rs  main.rs  neg.rs  rcp.rs  round.rs  sign.rs  sin.rs  sinh.rs  tan.rs  tanh.rs
tests/tensor/activation/: gelu.rs  leaky_relu.rs  mod.rs  sigmoid.rs  silu.rs  softplus.rs
tests/tensor/binary/: mod.rs
tests/tensor/binary/arithmetic/: add.rs  div.rs  mod.rs  mul.rs  pow.rs  rem.rs  sub.rs
tests/tensor/binary/comparison/: eq.rs  ge.rs  gt.rs  le.rs  lt.rs  mod.rs  ne.rs
tests/tensor/binary/logical/: and.rs  mod.rs  or.rs
tests/tensor/linalg/: matmul.rs  mod.rs
tests/tensor/math/: abs.rs  acos.rs  acosh.rs  add.rs  and.rs  asin.rs  atanh.rs  clamp.rs  cos.rs  div.rs  eq.rs  floor.rs  ge.rs  gt.rs  le.rs  log.rs  lt.rs  max.rs  min.rs  mod.rs  mul.rs  ne.rs  neg.rs  or.rs  pow.rs  rcp.rs  rem.rs  rsqr.rs  rsqrt.rs  select.rs  sinh.rs  sqrt.rs  sub.rs  tanh.rs
tests/tensor/matrix/: matmul.rs  mod.rs
tests/tensor/nn/: elu.rs  gelu.rs  leaky_relu.rs  mod.rs  prelu.rs  relu.rs  selu.rs  sigmoid.rs  silu.rs  softplus.rs
tests/tensor/random/: mod.rs  random_normal.rs  random_uniform.rs
tests/tensor/reduce/: max.rs  mean.rs  min.rs  mod.rs  sum.rs
tests/tensor/reduction/: max.rs  mean.rs  min.rs  mod.rs  sum.rs
tests/tensor/unary/: mod.rs
tests/tensor/unary/arithmetic/: abs.rs  acos.rs  acosh.rs  asin.rs  asinh.rs  atan.rs  atanh.rs  copy.rs  cos.rs  cosh.rs  exp.rs  log.rs  log2.rs  mod.rs  neg.rs  rcp.rs  sign.rs  sin.rs  sinh.rs  sqr.rs  tan.rs  tanh.rs
tests/tensor/unary/logical/: mod.rs  not.rs
tests/tensor/unary/rounding/: ceil.rs  floor.rs  mod.rs  round.rs
