[package]
name = "xnn"
version = "0.1.0"
edition = "2024"
authors = ["stdfox <stdfox@protonmail.com>"]
license = "MIT"
description = "A tiny open-source ML framework built from scratch in Rust"
repository = "https://github.com/stdfox/xnn"
readme = "README.md"

[features]
default = []
unstable-kernels = []

[dependencies]
bytemuck = { version = "~1.24", default-features = false }
pollster = { version = "~0.4", default-features = false }
thiserror = { version = "~2.0", default-features = false }
wgpu = { version = "~27.0", default-features = true, features = ["wgsl"] }

[dev-dependencies]
approx = { version = "~0.5", default-features = false }
criterion = { version = "~0.7", default-features = false }
rand = { version = "~0.9", default-features = false, features = ["std_rng"] }

[[bench]]
name = "kernel"
harness = false
required-features = ["unstable-kernels"]

[lints.rust]
unsafe_code = "forbid"
