[package]
name = "xnn"
version = "0.1.0"
edition = "2024"
authors = ["stdfox <stdfox@protonmail.com>"]
license = "MIT"
description = "A lightweight ML framework with GPU-first architecture"
repository = "https://github.com/stdfox/xnn"
documentation = "https://docs.rs/xnn"
readme = "README.md"
exclude = [".editorconfig", ".gitignore"]

[dependencies]
bytemuck = { version = "~1.24", default-features = false }
pollster = { version = "~0.4", default-features = false }
rustc-hash = { version = "~2.1", default-features = false }
spin = { version = "~0.10", default-features = false, features = ["rwlock"] }
thiserror = { version = "~2.0", default-features = false }
wgpu = { version = "~27.0", default-features = true, features = ["wgsl"] }

[dev-dependencies]
approx = { version = "~0.5", default-features = false }
criterion = { version = "~0.8", default-features = false }
rand = { version = "~0.9", default-features = false, features = ["std_rng"] }

[[bench]]
name = "tensor"
harness = false

[[example]]
name = "linreg"

[[example]]
name = "xor"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
cast_possible_truncation = "deny"
many_single_char_names = "allow"

[lints.rust]
unsafe_code = "forbid"
