[package]
name = "xnn"
version = "0.2.0"
edition = "2024"
authors = ["stdfox <stdfox@protonmail.com>"]
license = "MIT"
description = "A lightweight ML framework with GPU-first architecture"
repository = "https://github.com/stdfox/xnn"
documentation = "https://docs.rs/xnn"
readme = "README.md"
exclude = [".editorconfig", ".gitignore"]

[dependencies]
bytemuck = { version = "~1.24", default-features = false }
futures-channel = { version = "~0.3", default-features = false, features = ["alloc"] }
spin = { version = "~0.10", default-features = false, features = ["rwlock", "spin_mutex"] }
thiserror = { version = "~2.0", default-features = false }
wgpu = { version = "~28.0", default-features = false, features = ["dx12", "gles", "metal", "naga-ir", "vulkan", "webgpu", "wgsl"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
pollster = { version = "~0.4", default-features = false }

[dev-dependencies]
approx = { version = "~0.5", default-features = false }
criterion = { version = "~0.8", default-features = false }
rand = { version = "~0.9", default-features = false, features = ["std_rng"] }

[[bench]]
name = "tensor"
harness = false

[[example]]
name = "linreg"

[[example]]
name = "xor"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
cast_possible_truncation = "deny"
many_single_char_names = "allow"
too_many_arguments = "allow"

[lints.rust]
unsafe_code = "forbid"
