[package]
name = "mnist-train"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
flate2 = { version = "~1.1", default-features = true }
rand = { version = "~0.9", default-features = false, features = ["std_rng", "thread_rng"] }
ureq = { version = "~3.1", default-features = true }
xnn = { path = "../.." }

[[bin]]
name = "mnist-train"
path = "src/main.rs"
